--- a/.env
+++ b/.env
@@ -1,8 +1,17 @@
 NODE_ENV="development"
 MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=product_manager_db
+MYSQL_DATABASE=product_manager
 MYSQL_HOST=127.0.0.1
 MYSQL_PORT=3307
 MYSQL_USERNAME=root
 MYSQL_PASSWORD=root
 MYSQL_SYNCHRONIZE=true
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="mysql://root:root@localhost:3307/product_manager"
