--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,13 @@
-version: '3'
+version: '3.5'
 services:
-  db:
-    image: mysql:8.0.30-debian
-    env_file:
-      - .env
-    ports:
-      - 3307:3306
+  postgres:
+    container_name: postgres-product-manager
+    image: postgres
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=product_manager
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=product-manager
+    volumes:
+      - ./data:/data/postgres
+    ports:
+      - "5434:5432"
